--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="prueba.html">Sobre mí</a></li>
+                <li><a href="sobre-mi.html">Sobre mí</a></li>
                 <li><a href="resume-cv.html">Currículum</a></li>
                 <li><a href="services.html">Servicios</a></li>
                 <li><a href="contact.html">Contacto</a></li>
