--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -26,15 +26,16 @@
         <h2>Sobre mí</h2>
         <ul>
             <li><strong>Biografía corta y profesional</strong>
-                <p>Juan Pérez es un profesional con más de 10 años de experiencia en el desarrollo web. Graduado en Ingeniería Informática, ha trabajado en diversos sectores, desde startups hasta grandes corporaciones. Su pasión por la tecnología y su enfoque en la innovación lo han llevado a liderar proyectos exitosos que han transformado la presencia digital de sus clientes.</p>
+                <p>¡Hola! Soy Dana Egochine, tengo 21 años y soy de Quilmes. Actualmente estoy estudiando la tecnicatura en Desarrollo de Software en la Universidad Argentina de la Empresa (UADE). Mi trayectoria educativa ha estado centrada en la electrónica y en el desarrollo de soluciones tecnológicas automatizadas, con un enfoque en la innovación y la mejora de la eficiencia.</p>
+                <p>Mi carrera me ha permitido aplicar habilidades técnicas y teóricas, desde el diseño hasta la implementación y prueba de sistemas electrónicos y electromecánicos. Me considero una persona apasionada por la tecnología y siempre en búsqueda de nuevos desafíos que me permitan crecer tanto profesional como personalmente.</p>
             </li>
 
             <li><strong>Formación académica y experiencia relevante</strong>
-                <p>Juan Pérez obtuvo su título en Ingeniería Informática en la Universidad de Barcelona. Posteriormente, realizó un máster en Desarrollo Web en la Universidad Politécnica de Madrid. Ha trabajado en empresas como Tech Solutions y Creative Web, donde ha liderado equipos de desarrollo y gestionado proyectos complejos, desde la conceptualización hasta la implementación final.</p>
+                <p>Me gradué como Técnica en Electrónica en la E.E.S.T N°2 'Paula A. de Sarmiento' en Bernal. Después, comencé la Ingeniería Electrónica en la UTN Avellaneda, aunque actualmente me encuentro en pausa para dedicarme a mis estudios en Desarrollo de Software en la UADE.</p>
             </li>
 
             <li><strong>Objetivos profesionales y filosofía de trabajo</strong>
-                <p>Mi objetivo profesional es seguir creciendo en el campo del desarrollo web y explorar nuevas tecnologías que permitan crear experiencias digitales innovadoras. Mi filosofía de trabajo se basa en la colaboración abierta, la resolución creativa de problemas y la entrega de soluciones de alta calidad que superen las expectativas del cliente.</p>
+                <p>Mi objetivo profesional es seguir avanzando en el desarrollo de software, explorar nuevas tecnologías y aplicar mi experiencia en soluciones automatizadas que puedan transformar procesos en diversos sectores. Mi filosofía de trabajo se basa en la colaboración abierta, la resolución creativa de problemas y en entregar soluciones de alta calidad que no solo cumplan, sino que superen las expectativas de mis clientes.</p>
             </li>
         </ul>
     </section>
