--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 <li><a href="resume-cv.html">Currículum</a></li>
                 <li><a href="services.html">Servicios</a></li>
                 <li><a href="contact.html">Contacto</a></li>
+                <li><button id="toggle-dark-mode">Cambiar modo🌙</button></li>
             </ul>
         </nav>
+
     </header>
 
     <!-- Sección principal del portfolio -->
@@ -54,6 +56,6 @@
     <footer>
         <p>Derechos reservados &copy; 2024 | Contacto: degochine@uade.edu.ar</p>
     </footer>
-
+    <script src= "javascript/js.js"></script>   
 </body>
 </html>
