--- a/services.html
+++ b/services.html
@@ -16,6 +16,7 @@
                 <li><a href="resume-cv.html">Currículum</a></li>
                 <li><a href="services.html">Servicios</a></li>
                 <li><a href="contact.html">Contacto</a></li>
+                <li><button id="toggle-dark-mode">Cambiar modo🌙</button></li>
             </ul>
         </nav>
     </header>
@@ -70,5 +71,7 @@
     <footer>
         <p>Derechos reservados &copy; 2024 | Contacto: degochine@uade.edu.ar</p>
     </footer>
+    <script src= "javascript/js.js"></script>   
+
 </body>
 </html>
