--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -17,6 +17,7 @@
                 <li><a href="resume-cv.html">Currículum</a></li>
                 <li><a href="services.html">Servicios</a></li>
                 <li><a href="contact.html">Contacto</a></li>
+                <li><button id="toggle-dark-mode">Cambiar modo🌙</button></li>
             </ul>
         </nav>
     </header>
@@ -45,6 +46,6 @@
     <footer>
         <p>Derechos reservados &copy; 2024 | Contacto: degochine@uade.edu.ar</p>
     </footer>
-
+    <script src= "javascript/js.js"></script>   
 </body>
 </html>
